--- a/index.html
+++ b/index.html
@@ -197,6 +197,7 @@
                         <li><a href="link/mammillariaindex.html#elongata">elongata anguinea</a></li>
                         <li><a href="link/mammillariaindex.html#longimamma">longimamma</a></li>
                         <li><a href="link/mammillariaindex.html#toluca">toluca</a></li>
+                        <li><a href="link/mammillariaindex.html#sp1">sp 1</a></li>
                     </ul>
                 </li>
                 <li><a href="#">Monstera</a>
@@ -211,7 +212,6 @@
                         <li><a href="link/notocactusindex.html">Accueil</a></li>
                         <li><a href="link/notocactusindex.html#haselbergii">haselbergii</a></li>
                         <li><a href="link/notocactusindex.html#magnificus">magnificus</a></li>
-                        <li><a href="link/notocactusindex.html#mammulosus">mammulosus</a></li>
                     </ul>
                 </li>              
                 <li><a href="#">Opuntia</a>
