--- a/link/mammillariagallery.html
+++ b/link/mammillariagallery.html
@@ -67,6 +67,17 @@
         <img class="flex" src="../assets/img/mammillaria/gallery/mammillariatoluca(1).jpg" alt="toluca" title="toluca"/>
         <img class="flex" src="../assets/img/mammillaria/gallery/mammillariatoluca(2).jpg" alt="toluca" title="toluca"/>
     </section>
+    <hr>
+            <div class="species-title-gallery-category" id="sp1">sp 1
+                <a href="mammillariaindex.html#sp1">Voir la fiche info</a>
+            </div>
+            <hr>
+    <section>                                                                   <!-- SP 1 -->
+        <img class="flex" src="../assets/img/mammillaria/gallery/sp1(1).jpg" alt="sp1" title="sp1"/>
+        <img class="flex" src="../assets/img/mammillaria/gallery/sp1(2).jpg" alt="sp1" title="sp1"/>
+        <img class="flex" src="../assets/img/mammillaria/gallery/sp1(3).jpg" alt="sp1" title="sp1"/>
+        <img class="flex" src="../assets/img/mammillaria/gallery/sp1(4).jpg" alt="sp1" title="sp1"/>
+    </section>
 </main>
 <nav class="btn-index-category">                                                <!-- BOUTONS DE NAVIGATION ET TOP -->
     <button class="styled-btn-welcome"><a href="../index.html">Retourner sur la page d'accueil</a></button>
