--- a/modal.html
+++ b/modal.html
@@ -34,8 +34,8 @@
                                             &nbsp;&nbsp;_Ajout <a href="link/othercactusindex.html#aureiflora" alt="matucana aureiflora" title="matucana aureiflora"><strong>Matucana aureiflora</strong></a> (Mes Cactus).<br/>
                                             &nbsp;&nbsp;_Ajout <a href="link/othercactusindex.html#madisonorium" alt="matucana madisonorium" title="matucana madisonorium"><strong>Matucana madisonorium</strong></a> (Mes Cactus).<br/>
                                             &nbsp;&nbsp;_Ajout <a href="link/othercactusindex.html#polzii" alt="matucana polzii" title="matucana polzii"><strong>Matucana polzii</strong></a> (Mes Cactus).<br/>
-                                            &nbsp;&nbsp;_Ajout <a href="link/notocactusindex.html#mammulosus" alt="notocactus mammulosus" title="notocactus mammulosus"><strong>Notocactus mammulosus</strong></a> (Mes Notocactus).<br/>
-                                            &nbsp;&nbsp;_Ajout rempotage <a class="species-repotting-info" href="link/repottingnotocactusmammulosus.html" alt="notocactus mammulosus" title="notocactus mammulosus"><strong>Notocactus mammulosus.</strong></a><br>
+                                            &nbsp;&nbsp;_Ajout <a href="link/mammillariaindex.html#sp1" alt="mammillaria sp1" title="mammillaria sp1"><strong>Mammillaria sp 1</strong></a> (Mes Mammillaria).<br/>
+                                            &nbsp;&nbsp;_Ajout rempotage <a class="species-repotting-info" href="link/repottingmammillariasp1.html" alt="mammillaria sp1" title="mammillaria sp1"><strong>Mammillaria sp 1.</strong></a><br>
 
                                         </div>
                                     </div>
