--- a/link/mammillariaindex.html
+++ b/link/mammillariaindex.html
@@ -25,6 +25,7 @@
                             <li><a href="#anguinea">elongata anguinea</a></li>
                             <li><a href="#longimamma">longimamma</a></li>
                             <li><a href="#toluca">toluca</a></li>
+                            <li><a href="#sp1">sp 1</a></li>
                         </ul>
                         </li>
                             <li><a href="#top">Haut de la page</a></li>
@@ -119,6 +120,35 @@
             </div>
         </section>
         <hr>
+        <section class="index-category-system-tabs">                            <!-- SP 1 -->
+            <nav-tabs class="index-category-nav-tabs" id="sp1">
+                <a href="#sp1-1" aria-selected="true">Nom</a>
+                <a href="#sp1-2">Exposition en été</a>
+                <a href="#sp1-3">Exposition en hiver</a>
+                <a href="#sp1-4">Arrosage en été</a>
+                <a href="#sp1-5">Arrosage en hiver</a>
+                <a href="#sp1-6">Rempotage</a>
+            </nav-tabs>    
+            <div class="index-category-tab-content" id="sp1-1"><span class="species">sp 1<a href="mammillariagallery.html#sp1">Voir la galerie photo</a></span>
+                    <img class="flex2" src="../assets/img/mammillaria/index/sp1(1).jpg" alt="sp1" title="sp1"/>
+                    <img class="flex2" src="../assets/img/mammillaria/index/sp1(2).jpg" alt="sp1" title="sp1"/>
+                    <img class="flex2" src="../assets/img/mammillaria/index/sp1(3).jpg" alt="sp1" title="sp1"/>
+                    <img class="flex2" src="../assets/img/mammillaria/index/sp1(4).jpg" alt="sp1" title="sp1"/>
+            </div>   
+            <div class="index-category-tab-content" id="sp1-2" hidden="hidden">Je le mets dehors à partir de la deuxième quinzaine de Mai ou début Juin jusque courant Octobre en plein soleil direct toute la journée. <br/>Je ne le laisse pas dehors si les nuits sont trop froides comme par exemple sous les 10°C. <br/>Doit avoir été acclimaté avant de rester en plein soleil.
+            </div>
+            </div>
+            <div class="index-category-tab-content" id="sp1-3" hidden="hidden">Je le laisse en intérieur dans un endroit très lumineux recevant le soleil direct contre une fenêtre ou la température ne descendra jamais sous les 10°C.
+            </div>
+            <div class="index-category-tab-content" id="sp1-4" hidden="hidden">Je ne l'arrose que peu durent de longues périodes chaudes sans pluie. <br/>En général par bassinage car, la chaleur et le soleil feront sécher la motte assez rapidement sans risque que la moisissure ne s'installe.
+            </div>
+            <div class="index-category-tab-content" id="sp1-5" hidden="hidden">Je ne l'arrose pas du tout durant plusieurs mois.
+            </div>
+            <div class="index-category-tab-content" id="sp1-6" hidden="hidden">Je mélange un fin terreau pour plantes d'intérieur en retirant tous les gros morceaux et je le mélange avec une bonne quantité de gravillons de quartz et de sable de rivière. <br/>Je garnis le haut de graviers de Jura surtout car j'aime bien le rendu qui fait un peu désertique. <br/>Je le garde à plusieurs dans un pot en terre-cuite de taille moyenne.
+                <a class="species-repotting-info" href="repottingmammillariasp1.html" alt="sp1" title="sp 1">Voir comment je rempote les sp 1</a>
+            </div>
+        </section>
+        <hr>    
 <nav class="btn-index-category">                                                <!-- BOUTONS DE NAVIGATION ET TOP -->
             <button class="styled-btn-gallery"><a href="mammillariagallery.html">Galerie photos de mes Mammillaria</a></button>
             <button class="styled-btn-top"><a href="#top">Haut de la page</a></button>
