--- a/link/othersucculentsindex.html
+++ b/link/othersucculentsindex.html
@@ -195,7 +195,7 @@
                     <img src="../assets/img/othersucculents/index/frithiapulchra(4).jpg" alt="Frithia pulchra" title="Frithia pulchra"/>
                     <img src="../assets/img/othersucculents/index/frithiapulchra(5).jpg" alt="Frithia pulchra" title="Frithia pulchra"/>
             </div>   
-            <div class="index-category-tab-content" id="pulchra2" hidden="hidden">Je le mets dehors à partir de la deuxième quinzaine de Mai jusque courant Octobre dans une situation très lumineuse avec du soleil direct toute la journée. <br/>Seulement après avoir été acclimaté au soleil.
+            <div class="index-category-tab-content" id="pulchra2" hidden="hidden">Je le mets dehors à partir de la deuxième quinzaine de Mai jusque courant Octobre dans une situation très lumineuse avec du soleil direct matin et/ou soir. <br/>Seulement après avoir été acclimaté au soleil.
             </div>
             <div class="index-category-tab-content" id="pulchra3" hidden="hidden">Je le place en intérieur dans une pièce non chauffée contre une fenêtre recevant du soleil. 
             </div>
