--- a/modal.html
+++ b/modal.html
@@ -17,6 +17,16 @@
                     <hr>
                         <div class="modal-update-left">
                             <ul>
+                                <li>                                            <!-- 14/08/2021 -->
+                                    <div class="modal-date-flex">
+                                            14/08/2021:
+                                    </div>
+                                    <div class="modal-desc-flex">
+                                        <div>
+                                            &nbsp;&nbsp;_Ajout <a href="link/otherplantsindex.html#pinkpassion" alt="aglaonema pink passion" title="aglaonema pink passion"><strong>Aglaonema pink passion</strong></a> (Mes autres plantes).<br/>
+                                        </div>
+                                    </div>
+                                </li>
                                 <li>                                            <!-- 13/08/2021 -->
                                     <div class="modal-date-flex">
                                             13/08/2021:
@@ -36,7 +46,6 @@
                                             &nbsp;&nbsp;_Ajout <a href="link/othercactusindex.html#polzii" alt="matucana polzii" title="matucana polzii"><strong>Matucana polzii</strong></a> (Mes Cactus).<br/>
                                             &nbsp;&nbsp;_Ajout <a href="link/mammillariaindex.html#sp1" alt="mammillaria sp1" title="mammillaria sp1"><strong>Mammillaria sp 1</strong></a> (Mes Mammillaria).<br/>
                                             &nbsp;&nbsp;_Ajout rempotage <a class="species-repotting-info" href="link/repottingmammillariasp1.html" alt="mammillaria sp1" title="mammillaria sp1"><strong>Mammillaria sp 1.</strong></a><br>
-
                                         </div>
                                     </div>
                                 </li>
@@ -327,6 +336,7 @@
                     <hr>
                         <div>
                             <ul>
+                                <li>_Ajout d'un formulaire de contact.</li>
                                 <li>_Ajout de plantes.</li>
                                 <li>_Ajout de photos.</li>
                                 <li>_Création pages <strong>rempotages.</strong></li>
