--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>Mes plantes</title>
 </head>
 <body >
-                    <div class="changelink" style="font-size: 150px; text-align: center; margin-top: 250px; background-color: aqua;">
+                    <div class="changelink">
                     Retrouvez mon site sur <a href="http://lesplantesdefab.be/">lesplantesdefab</a>
                     </div>
 </body>
