--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body >
                     <div class="changelink">
-                    Retrouvez mon site sur <a href="http://lesplantesdefab.be/">lesplantesdefab</a>
+                    Retrouvez mon site sur <a href="https://www.lesplantesdefab.be/">lesplantesdefab</a>
                     </div>
 </body>
 </html>
